<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pavel Shahov</string>
    <string name="nav_header_subtitle">pashamyl@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact with us</string>
    <string name="communicate">Communicate</string>
    <string name="about_developer">My name is Pavel Shahov, I\'m a young developer from Moscow :)</string>
    <string name="about_developer_2">Here you can see my first Android app - Weather Client.</string>
    <string name="about_developer_3">Hope you guys enjoy it :)</string>
    <string name="contacts_header">Our contacts:</string>
    <string name="contact_us_email">email:</string>
    <string name="contact_us_email_real">helpwithapp@gmail.com</string>
    <string name="contact_us_phone">phone:</string>
    <string name="contact_us_phone_real">+7 999 999 99-99</string>
    <string name="contact_us_address">address:</string>
    <string name="contact_us_address_real">Moscow, Sushevski val street, 21/2</string>
    <string name="action_search">Search</string>
    <string name="google_maps_api_key">AIzaSyAl86oNGIJett7ckJZBmbPoaLdVVNlONN4</string>
    <string name="fragment_current_weather_button">Current weather</string>

</resources>