<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon_developer"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_about_developer" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_developer"
        android:textAlignment="center"
        android:textSize="19sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_developer_2"
        android:textAlignment="center"
        android:textSize="19sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_developer_3"
        android:textAlignment="center"
        android:textSize="19sp"/>




</LinearLayout>